# VNPT-Yunet-Face-Detection

./: CMakeLists.txt  Makefile  README.md  main.cpp
build-test/: CMakeCache.txt  Makefile  cmake_install.cmake
buildmips/: CMakeCache.txt  Makefile  Yunet  cmake_install.cmake
buildmips-uclibc/: CMakeCache.txt  Makefile  Yunet  cmake_install.cmake
lib/: libncnn.so.1.0.20230717
models/: face_detection_yunet_2023mar-sim-opt.binZone.Identifier  face_detection_yunet_2023mar-sim-opt.param  yunet_n_320_320-sim-opt.param
